add NutriPlays app

--- a/index.css
+++ b/index.css
@@ -19,6 +19,8 @@ body {
 }
 img{
   width: 500PX;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 a {
   text-decoration: none;
