--- a/index.css
+++ b/index.css
@@ -461,3 +461,23 @@ footer .layout-wrap img {
   }
 }
 /*# sourceMappingURL=index.css.map */
+
+
+.email-button {
+  display: inline-block;
+  padding: 10px 20px;
+  
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 6px;
+  transition: all 0.3s ease;
+ 
+}
+
+.email-button:hover {
+
+  /* background-color: #45c2b5; */
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0,0,0,0.3);
+}
+
